--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Vamos hacer un blogpost</h1>
-        <p>Parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título de el post</h1>
+                <p>Parrafo de inicio donde explicamos las cosas del blogpost</p>
+            </div>    
+        </div>
     </body>
 </html>
