Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es el título de el post</h1>
                 <p>Parrafo de inicio donde explicamos las cosas del blogpost</p>
