Finalizada la cabecera con diseño de color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,11 +7,14 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline"> Tu blog de 
+                confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título de el post</h1>
-                <p>Parrafo de inicio donde explicamos las cosas del blogpost</p>
+                <p>Parrafo de inicio donde explicamos 
+                las cosas del blogpost</p>
             </div>    
         </div>
     </body>
