--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,13 @@
         <div id="container">
             <div id="post">
                 <h1>Este es el título de el post</h1>
-                <p>Parrafo de inicio donde explicamos las cosas del blogpost</p>
+                <p>Parrafo de inicio donde explicamos 
+                    las cosas del blogpost</p>
+                
+                <p>Los blogs son la mejor forma de compartir 
+                    tus ideas. Mucho más que ir a conferencias
+                    o salir en YouTube. Excepto si eres rockstar.
+                    Pero estadisticamente no lo eres... por ahora</p> 
             </div>    
         </div>
     </body>
