--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline"> Tu blog de 
-                confianza</span>
+                master</span>
             </div>
             <div id="post">
                 <h1>Este es el título de el post</h1>
@@ -18,6 +18,7 @@
                     tus ideas. Mucho más que ir a conferencias
                     o salir en YouTube. Excepto si eres rockstar.
                     Pero estadisticamente no lo eres... por ahora</p>
+                <p>Suscribete y dale like</p>
             </div>    
         </div>
     </body>
