--- a/blogpost.html
+++ b/blogpost.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Bienvenido a Hyperblog 2.0</title>
-=======
         <title>Bienvenido a Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="images/dragon.png">
                 Hyperblog
                 <span id="tagline"> Tu blog de 
                 master</span>
@@ -21,7 +21,10 @@
                     o salir en YouTube. Excepto si eres rockstar.
                     Pero estadisticamente no lo eres... por ahora</p>
                 <p>Suscribete y dale like</p>
-            </div>    
+            </div> 
+            <div id="footer">
+                Hecho con amor Santiago &lt;3
+            </div>   
         </div>
     </body>
 </html>
