--- a/blogpost.html
+++ b/blogpost.html
@@ -15,11 +15,11 @@
             </div>
             <div id="post">
                 <h1>Este es el título de el post</h1>
-                <p>Parrafo de inicio donde explicamos</p>
+                <p>Párrafo de inicio donde explicamos cosas increíbles</p>
                 <p>Los blogs son la mejor forma de compartir 
                     tus ideas. Mucho más que ir a conferencias
                     o salir en YouTube. Excepto si eres rockstar.
-                    Pero estadisticamente no lo eres... por ahora</p>
+                    Pero estadísticamente no lo eres... por ahora</p>
                 <p>Suscribete y dale like</p>
             </div> 
             <div id="footer">
