--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
             </div>
             <div id="post">
                 <h1>Este es el título de el post</h1>
-                <p>Párrafo de inicio donde explicamos cosas increíbles</p>
+                <p>Párrafo de inicio donde explicamos cosas increíbles y con amor</p>
                 <p>Los blogs son la mejor forma de compartir 
                     tus ideas. Mucho más que ir a conferencias
                     o salir en YouTube. Excepto si eres rockstar.
